--- a/problem5/package.json
+++ b/problem5/package.json
@@ -4,7 +4,9 @@
     "description": "",
     "main": "server.js",
     "scripts": {
-        "dev": "nodemon server.ts"
+        "dev": "nodemon server.ts",
+        "build": "npx tsc -d",
+        "start": "node dist/server.js"
     },
     "keywords": [],
     "author": "",
